// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`2_meaColor 1`] = `
{
  "annotation": {},
  "chartType": "heatmap",
  "config": {
    "heatmap": {
      "backgroundColor": "transparent",
      "cell": {
        "stroke": "#fff",
      },
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
        "negativeColor": "#EB3373",
        "positiveColor": "#7E5DFF",
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": true,
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "axisLabelColor": "#BCC1CB",
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "chartGridColor": "#F0F1F6",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "tooltip": {
        "backgroundColor": "#fff",
        "borderColor": "#e3e5e8",
        "borderRadius": 12,
        "borderWidth": 1,
        "enable": true,
        "fontSize": 12,
        "keyColor": "#606773",
        "lineHeight": 12,
        "lineSpace": 6,
        "padding": 7,
        "titleColor": "#21252c",
        "valueColor": "#21252c",
      },
    },
  },
  "customTheme": {
    "config": {
      "heatmap": {
        "backgroundColor": "transparent",
        "cell": {
          "stroke": "#fff",
        },
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
          "negativeColor": "#EB3373",
          "positiveColor": "#7E5DFF",
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": true,
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "axisLabelColor": "#BCC1CB",
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "chartGridColor": "#F0F1F6",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "tooltip": {
          "backgroundColor": "#fff",
          "borderColor": "#e3e5e8",
          "borderRadius": 12,
          "borderWidth": 1,
          "enable": true,
          "fontSize": 12,
          "keyColor": "#606773",
          "lineHeight": 12,
          "lineSpace": 6,
          "padding": 7,
          "titleColor": "#21252c",
          "valueColor": "#21252c",
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 20,
      "__Dim_Detail__": "A-2019",
      "__Dim_X__": "A",
      "__Dim_Y__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 20,
      "__Dim_Detail__": "A-2019",
      "__Dim_X__": "A",
      "__Dim_Y__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "B-2019",
      "__Dim_X__": "B",
      "__Dim_Y__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "B-2019",
      "__Dim_X__": "B",
      "__Dim_Y__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "C-2019",
      "__Dim_X__": "C",
      "__Dim_Y__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 60,
      "__Dim_Detail__": "C-2019",
      "__Dim_X__": "C",
      "__Dim_Y__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2019",
      "__Dim_X__": "D",
      "__Dim_Y__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2019",
      "__Dim_X__": "D",
      "__Dim_Y__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 80,
      "__Dim_Detail__": "E-2019",
      "__Dim_X__": "E",
      "__Dim_Y__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 80,
      "__Dim_Detail__": "E-2019",
      "__Dim_X__": "E",
      "__Dim_Y__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 210,
      "__Dim_Detail__": "A-2020",
      "__Dim_X__": "A",
      "__Dim_Y__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      "date": "2020",
      "profit": 100,
      "profit2": 210,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 210,
      "__Dim_Detail__": "A-2020",
      "__Dim_X__": "A",
      "__Dim_Y__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 210,
      "__OriginalData__": {
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 210,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "B-2020",
      "__Dim_X__": "B",
      "__Dim_Y__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      "date": "2020",
      "profit": 300,
      "profit2": 120,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "B-2020",
      "__Dim_X__": "B",
      "__Dim_Y__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 610,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      "date": "2020",
      "profit2": 120,
      "sales": 610,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "C-2020",
      "__Dim_X__": "C",
      "__Dim_Y__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      "date": "2020",
      "profit": 300,
      "profit2": 120,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 610,
      "__Dim_Detail__": "C-2020",
      "__Dim_X__": "C",
      "__Dim_Y__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 610,
      "__OriginalData__": {
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      "date": "2020",
      "profit2": 120,
      "sales": 610,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2020",
      "__Dim_X__": "D",
      "__Dim_Y__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit": 500,
      "profit2": 210,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 100,
      "__Dim_Detail__": "D-2020",
      "__Dim_X__": "D",
      "__Dim_Y__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 110,
      "__Dim_Detail__": "E-2020",
      "__Dim_X__": "E",
      "__Dim_Y__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 400,
      "__OriginalData__": {
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
      "date": "2020",
      "profit": 400,
      "profit2": 210,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "sales",
      "__Dim_Color__": 110,
      "__Dim_Detail__": "E-2020",
      "__Dim_X__": "E",
      "__Dim_Y__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 110,
      "__OriginalData__": {
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
      "date": "2020",
      "profit2": 210,
      "sales": 110,
      "type": "E",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": 610,
          "colorMin": 20,
          "count": 20,
          "max": 610,
          "min": 10,
          "sum": 3720,
        },
      },
      "id": "heatmap",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {},
        "colorItems": [],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "类型",
      "encoding": "detail",
      "id": "type",
    },
    {
      "alias": "日期",
      "encoding": "detail",
      "id": "date",
    },
    {
      "alias": "指标Id",
      "id": "__MeaId__",
    },
  ],
  "encoding": {
    "color": [
      "sales",
    ],
    "detail": [
      "type",
      "date",
    ],
    "label": [],
    "tooltip": [
      "type",
      "date",
    ],
    "x": [
      "type",
    ],
    "y": [
      "date",
      "__MeaId__",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "children": [
        {
          "alias": "利润",
          "encoding": "detail",
          "id": "profit",
          "parentId": "1",
        },
        {
          "alias": "销售额",
          "encoding": "color",
          "id": "sales",
          "parentId": "1",
        },
      ],
      "id": "1",
    },
  ],
}
`;

exports[`2_meaColor 2`] = `
{
  "animation": true,
  "axes": [
    {
      "bandPadding": 0,
      "orient": "left",
      "type": "band",
    },
    {
      "bandPadding": 0,
      "orient": "bottom",
      "type": "band",
    },
  ],
  "background": "transparent",
  "cell": {
    "style": {
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
      "lineWidth": 1,
      "shape": "rect",
      "stroke": "#fff",
      "visible": [Function],
    },
  },
  "color": {
    "domain": [
      {
        "dataId": "heatmap",
        "fields": [
          "__Dim_Color__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "heatmap",
    "values": [
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 20,
        "__Dim_Detail__": "A-2019",
        "__Dim_X__": "A",
        "__Dim_Y__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 20,
        "__Dim_Detail__": "A-2019",
        "__Dim_X__": "A",
        "__Dim_Y__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "B-2019",
        "__Dim_X__": "B",
        "__Dim_Y__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "B-2019",
        "__Dim_X__": "B",
        "__Dim_Y__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "C-2019",
        "__Dim_X__": "C",
        "__Dim_Y__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 60,
        "__Dim_Detail__": "C-2019",
        "__Dim_X__": "C",
        "__Dim_Y__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2019",
        "__Dim_X__": "D",
        "__Dim_Y__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2019",
        "__Dim_X__": "D",
        "__Dim_Y__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 80,
        "__Dim_Detail__": "E-2019",
        "__Dim_X__": "E",
        "__Dim_Y__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 80,
        "__Dim_Detail__": "E-2019",
        "__Dim_X__": "E",
        "__Dim_Y__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 210,
        "__Dim_Detail__": "A-2020",
        "__Dim_X__": "A",
        "__Dim_Y__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 100,
          "profit2": 210,
          "sales": 210,
          "type": "A",
        },
        "date": "2020",
        "profit": 100,
        "profit2": 210,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 210,
        "__Dim_Detail__": "A-2020",
        "__Dim_X__": "A",
        "__Dim_Y__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 210,
        "__OriginalData__": {
          "date": "2020",
          "profit": 100,
          "profit2": 210,
          "sales": 210,
          "type": "A",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 210,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "B-2020",
        "__Dim_X__": "B",
        "__Dim_Y__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "B",
        },
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "B-2020",
        "__Dim_X__": "B",
        "__Dim_Y__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 610,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "B",
        },
        "date": "2020",
        "profit2": 120,
        "sales": 610,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "C-2020",
        "__Dim_X__": "C",
        "__Dim_Y__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "C",
        },
        "date": "2020",
        "profit": 300,
        "profit2": 120,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 610,
        "__Dim_Detail__": "C-2020",
        "__Dim_X__": "C",
        "__Dim_Y__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 610,
        "__OriginalData__": {
          "date": "2020",
          "profit": 300,
          "profit2": 120,
          "sales": 610,
          "type": "C",
        },
        "date": "2020",
        "profit2": 120,
        "sales": 610,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2020",
        "__Dim_X__": "D",
        "__Dim_Y__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2020",
          "profit": 500,
          "profit2": 210,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit": 500,
        "profit2": 210,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 100,
        "__Dim_Detail__": "D-2020",
        "__Dim_X__": "D",
        "__Dim_Y__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 500,
          "profit2": 210,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 110,
        "__Dim_Detail__": "E-2020",
        "__Dim_X__": "E",
        "__Dim_Y__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 400,
        "__OriginalData__": {
          "date": "2020",
          "profit": 400,
          "profit2": 210,
          "sales": 110,
          "type": "E",
        },
        "date": "2020",
        "profit": 400,
        "profit2": 210,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "sales",
        "__Dim_Color__": 110,
        "__Dim_Detail__": "E-2020",
        "__Dim_X__": "E",
        "__Dim_Y__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 110,
        "__OriginalData__": {
          "date": "2020",
          "profit": 400,
          "profit2": 210,
          "sales": 110,
          "type": "E",
        },
        "date": "2020",
        "profit2": 210,
        "sales": 110,
        "type": "E",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": true,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "legends": {
    "customFilter": [Function],
    "field": "__Dim_Color__",
    "handlerText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "maxWidth": "30%",
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "color",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "visible": false,
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "style": {
      "keyLabel": {
        "fontColor": "#606773",
        "fontSize": 12,
        "lineHeight": 12,
      },
      "panel": {
        "backgroundColor": "#fff",
        "border": {
          "color": "#e3e5e8",
          "radius": 12,
          "width": 1,
        },
        "padding": 7,
      },
      "titleLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "bold",
        "lineHeight": 12,
      },
      "valueLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "medium",
        "lineHeight": 12,
      },
    },
    "visible": true,
  },
  "type": "heatmap",
  "valueField": "__MeaValue__",
  "xField": "__Dim_X__",
  "yField": "__Dim_Y__",
}
`;

exports[`2_meaColor 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {},
  "colorItems": [],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
